--- a/Samples/TracingSample.Netfx/App.config
+++ b/Samples/TracingSample.Netfx/App.config
@@ -1,11 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   <system.diagnostics>
     <sources>
       <source name="log" switchValue="All">
         <listeners>
-          <clear />
+          <clear/>
           <add name="Console" type="Tracing.TraceListener, Tracing" initializeData="TracerName"/>
         </listeners>
       </source>
@@ -13,14 +13,6 @@
   </system.diagnostics>
 
   <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Guards" publicKeyToken="ac6aedb73a72f46e" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.0.14.0" newVersion="1.0.14.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
 </configuration>
