--- a/Tests/Tracing.Tests/Tracing.Tests.csproj
+++ b/Tests/Tracing.Tests/Tracing.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;net452</TargetFrameworks>
+    <TargetFrameworks>net452;netcoreapp2.1</TargetFrameworks>
     <AssemblyName>Tracing.Tests</AssemblyName>
     <PackageId>Tracing.Tests</PackageId>
     <RuntimeIdentifiers>win10-x64</RuntimeIdentifiers>
@@ -15,10 +15,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.8.1" />
-    <PackageReference Include="FluentAssertions" Version="5.5.3" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-    <PackageReference Include="Moq" Version="4.10.1" />
+    <PackageReference Include="DryIoc.dll" Version="4.1.0-preview-03" />
+    <PackageReference Include="FluentAssertions" Version="5.9.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
@@ -35,6 +35,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Tracing.Extensions\Tracing.Autofac\Tracing.Autofac.csproj" />
+    <ProjectReference Include="..\..\Tracing.Extensions\Tracing.DryIoc\Tracing.DryIoc.csproj" />
     <ProjectReference Include="..\..\Tracing.Extensions\Tracing.xunit\Tracing.xunit.csproj" />
     <ProjectReference Include="..\..\Tracing\Tracing.csproj" />
   </ItemGroup>
