--- a/Tracing.Extensions/Tracing.Autofac/Tracing.Autofac.csproj
+++ b/Tracing.Extensions/Tracing.Autofac/Tracing.Autofac.csproj
@@ -6,7 +6,7 @@
     <VersionPrefix>1.0.0</VersionPrefix>
     <Version>1.0.0</Version>
     <Authors>Thomas Galliker</Authors>
-    <TargetFrameworks>netstandard1.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard1.0;netstandard2.0;net45</TargetFrameworks>
     <AssemblyName>Tracing.Autofac</AssemblyName>
     <PackageId>Tracing.Autofac</PackageId>
     <PackageTags>tracing tracer logging logger ITracer ILogger log trace abstraction autofac module</PackageTags>
@@ -35,16 +35,15 @@
     <RootNamespace>Tracing.Autofac</RootNamespace>
     <PackageReleaseNotes>2.0.0
 - Initial release</PackageReleaseNotes>
-    <Copyright>Copyright 2018</Copyright>
+    <Copyright>Copyright 2019</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Autofac" Version="4.6.1" />
+    <PackageReference Include="Autofac" Version="[4.9.0,)" />
   </ItemGroup>
 
   
   <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <!--<PackageReference Include="Tracing" Version="2.0.18338.1-pre" />-->
     <ProjectReference Include="..\..\Tracing\Tracing.csproj" />
   </ItemGroup>
 
