--- a/Tracing.Extensions/Tracing.Console/Tracing.Console.csproj
+++ b/Tracing.Extensions/Tracing.Console/Tracing.Console.csproj
@@ -6,7 +6,7 @@
     <VersionPrefix>1.0.0</VersionPrefix>
     <Version>1.0.0</Version>
     <Authors>Thomas Galliker</Authors>
-    <TargetFrameworks>netstandard1.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard1.0;netstandard2.0;net45</TargetFrameworks>
     <AssemblyName>Tracing.Console</AssemblyName>
     <PackageId>Tracing.Console</PackageId>
     <PackageTags>tracing tracer logging logger ITracer ILogger log trace abstraction system.console console</PackageTags>
@@ -35,7 +35,7 @@
     <RootNamespace>Tracing.Console</RootNamespace>
     <PackageReleaseNotes>2.0.0
 - Initial release</PackageReleaseNotes>
-    <Copyright>Copyright 2018</Copyright>
+    <Copyright>Copyright 2019</Copyright>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.0'">
@@ -44,7 +44,6 @@
 
   
   <ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <!--<PackageReference Include="Tracing" Version="2.0.18338.1-pre" />-->
     <ProjectReference Include="..\..\Tracing\Tracing.csproj" />
   </ItemGroup>
 
