--- a/Tracing.Extensions/Tracing.DryIoc/Tracing.DryIoc.csproj
+++ b/Tracing.Extensions/Tracing.DryIoc/Tracing.DryIoc.csproj
@@ -36,7 +36,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DryIoc.dll" Version="[4.0.0,)" />
+    <PackageReference Include="DryIoc.dll" Version="4.8.0" />
+    <PackageReference Include="System.Reflection.Emit.Lightweight" Version="4.7.0" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.3'">
