--- a/build.yml
+++ b/build.yml
@@ -1,56 +1,90 @@
 ####################################################################
-# VSTS Build Configuration, Version 1.2
+# VSTS Build Configuration, Version 1.3
 #
-# (c)2018 superdev GmbH
+# (c)2021 superdev GmbH
 ####################################################################
 
-name: 2.2.$(date:yy)$(DayOfYear).$(rev:rr)
+name: 2.3.$(date:yy)$(DayOfYear).$(rev:rr)
   
-queue:
-  name: Hosted VS2017
-  demands: 
-  - msbuild
-  - visualstudio
-  - vstest
+pool:
+  vmImage: 'windows-2019'
 
 trigger:
-- master
-- develop
-- release/*
+  branches:
+    include:
+    - master
+    - develop
+    - release/*
+    - feature/*
+
+  paths:
+    exclude:
+    - README.md
 
 variables:
   solution: 'Tracing.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
   buildVersionPostfix: '-pre'
+  nuspecFile: 'Tracing.nuspec'  
+  disable.coverage.autogenerate: 'true'
 
 steps:
-- task: bleddynrichards.Assembly-Info-Task.Assembly-Info-Task.Assembly-Info-Task@1
-  displayName: 'Set Assembly Manifest Data'
+- task: Bash@3
+  displayName: 'Print all variables'
   inputs:
-    FileNames: |
-     Tracing.csproj
-     Tracing.Autofac.csproj
-     Tracing.Console.csproj
-     Tracing.xunit.csproj
-     # AssemblyInfo.cs
+    targetType: 'inline'
+    script: 'env | sort'
+
+- task: Assembly-Info-NetFramework@2
+  displayName: 'Update Assembly Info (.Net Framework)'
+  inputs:
+    Path: '$(Build.SourcesDirectory)'
+    FileNames: '**\AssemblyInfo.cs'
     InsertAttributes: true
+    FileEncoding: 'auto'
+    WriteBOM: false
     Title: 'Tracing'
     Description: 'Tracing.NET - A simple Logger/Tracer abstraction'
     Company: 'superdev GmbH'
-    Copyright: '(c) $(date:yyyy) superdev GmbH'
+    Copyright: '(c) $(date:YYYY) superdev GmbH'
     VersionNumber: '$(Build.BuildNumber)'
     FileVersionNumber: '$(Build.BuildNumber)'
+    InformationalVersion: '$(Build.BuildNumber)'
+    LogLevel: 'verbose'
+    FailOnWarning: false
+    DisableTelemetry: false
+
+- task: Assembly-Info-NetCore@2
+  displayName: 'Update Assembly Info (.Net Core/Standard)'
+  inputs:
+    Path: '$(Build.SourcesDirectory)'
+    FileNames: |
+      **/*.csproj
+    InsertAttributes: true
+    FileEncoding: 'auto'
+    WriteBOM: false
+    Product: 'Tracing'
+    Description: 'Tracing.NET - A simple Logger/Tracer abstraction'
+    Company: 'superdev GmbH'
+    Copyright: '(c) $(date:YYYY) superdev GmbH'
+    VersionNumber: '$(Build.BuildNumber)'
+    FileVersionNumber: '$(Build.BuildNumber)'
+    InformationalVersion: '$(Build.BuildNumber)'
+    PackageVersion: '$(Build.BuildNumber)'
+    LogLevel: 'verbose'
+    FailOnWarning: false
+    DisableTelemetry: false'
 
 - task: NuGetToolInstaller@0
-  displayName: 'Use NuGet 4.4.1'
+  displayName: 'Use NuGet 5.x'
   inputs:
-    versionSpec: 4.4.1
+    versionSpec: 5.x
 
 - task: NuGetCommand@2
   displayName: 'NuGet restore'
   inputs:
-    restoreSolution: '$(Parameters.solution)'
+    restoreSolution: '$(solution)'
 
 - powershell: |
    Write-Host "##vso[task.setvariable variable=PackageVersion]$(Build.BuildNumber)"
@@ -62,17 +96,18 @@ steps:
   inputs:
     solution: '$(solution)'
     msbuildArgs: ''
-    platform: '$(BuildPlatform)'
-    configuration: '$(BuildConfiguration)'
+    platform: '$(buildPlatform)'
+    configuration: '$(buildConfiguration)'
 
 - task: DotNetCoreCLI@2
   displayName: 'Run UnitTests'
+  continueOnError: false
   inputs:
     command: test
-    projects: '**/Tracing.Tests.csproj'
+    projects: '**/*.Tests.csproj'
     arguments: ''
 
-- task: DotNetCoreCLI@2
+- task: NuGetCommand@2
   displayName: 'Pack NuGet PreRelease'
   inputs:
     command: pack
@@ -80,7 +115,7 @@ steps:
     versioningScheme: byEnvVar
     versionEnvVar: PackageVersionPre
 
-- task: DotNetCoreCLI@2
+- task: NuGetCommand@2
   displayName: 'Pack NuGet Prod'
   inputs:
     command: pack
@@ -94,7 +129,7 @@ steps:
     SourceFolder: '$(system.defaultworkingdirectory)'
 
     Contents: |
-     **\bin\$(BuildConfiguration)\**
+     **\bin\$(buildConfiguration)\**
      **\bin\*.nupkg
 
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
