--- a/build.yml
+++ b/build.yml
@@ -1,11 +1,11 @@
 ####################################################################
-# VSTS Build Configuration, Version 1.3
+# VSTS Build Configuration, Version 1.4
 #
 # (c)2021 superdev GmbH
 ####################################################################
 
-name: 2.3.$(date:yy)$(DayOfYear).$(rev:rr)
-  
+name: $[format('{0}', variables['buildName'])]
+
 pool:
   vmImage: 'windows-2019'
 
@@ -14,18 +14,32 @@ trigger:
     include:
     - master
     - develop
-    - release/*
     - feature/*
+    - bugfix/*
 
   paths:
     exclude:
     - README.md
+    - Images/*
+    - Samples/*
 
 variables:
   solution: 'Tracing.sln'
   buildPlatform: 'Any CPU'
   buildConfiguration: 'Release'
-  buildVersionPostfix: '-pre'
+  majorVersion: 2
+  minorVersion: 4
+  patchVersion: $[counter(format('{0}.{1}', variables.majorVersion, variables.minorVersion), 0)]
+  ${{ if eq(variables['Build.SourceBranch'], 'refs/heads/master') }}:
+    # Versioning: 1.0.0
+    semVersion: $[format('{0}.{1}.{2}', variables.majorVersion, variables.minorVersion, variables.patchVersion)]
+  ${{ if and(ne(variables['Build.SourceBranch'], 'refs/heads/master'), not(startsWith(variables['Build.SourceBranch'], 'refs/pull/'))) }}:
+    # Versioning: 1.0.0-pre
+    semVersion: $[format('{0}.{1}.{2}-pre', variables.majorVersion, variables.minorVersion, variables.patchVersion)]
+  ${{ if startsWith(variables['Build.SourceBranch'], 'refs/pull/') }}:
+    # Versioning: 1.0.0-pr.000000001
+    semVersion: $[format('{0}.{1}.{2}-pr.{3}', variables.majorVersion, variables.minorVersion, variables.patchVersion, variables['System.PullRequest.PullRequestId'])]
+  buildName: $[format('{0}', variables.semVersion)]
 
 steps:
 - task: Bash@3
@@ -33,9 +47,9 @@ steps:
   inputs:
     targetType: 'inline'
     script: 'env | sort'
-
+   
 - task: Assembly-Info-NetFramework@2
-  displayName: 'Update Assembly Info (.Net Framework)'
+  displayName: 'Update Assembly Info (.NET Framework)'
   inputs:
     Path: '$(Build.SourcesDirectory)'
     FileNames: '**\AssemblyInfo.cs'
@@ -54,7 +68,7 @@ steps:
     DisableTelemetry: false
 
 - task: Assembly-Info-NetCore@2
-  displayName: 'Update Assembly Info (.Net Core/Standard)'
+  displayName: 'Update Assembly Info'
   inputs:
     Path: '$(Build.SourcesDirectory)'
     FileNames: |
@@ -63,7 +77,7 @@ steps:
     FileEncoding: 'auto'
     WriteBOM: false
     Product: 'Tracing'
-    Description: 'Tracing.NET - A simple Logger/Tracer abstraction'
+    Description: ''
     Company: 'superdev GmbH'
     Copyright: '(c) $(date:YYYY) superdev GmbH'
     VersionNumber: '$(Build.BuildNumber)'
@@ -73,6 +87,7 @@ steps:
     LogLevel: 'verbose'
     FailOnWarning: false
     DisableTelemetry: false'
+
 
 - task: NuGetToolInstaller@0
   displayName: 'Use NuGet 5.x'
@@ -84,42 +99,29 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
-- powershell: |
-   Write-Host "##vso[task.setvariable variable=PackageVersion]$(Build.BuildNumber)"
-   Write-Host "##vso[task.setvariable variable=PackageVersionPre]$(Build.BuildNumber)$(BuildVersionPostfix)"
-  displayName: 'Set PackageVersion'
-
 - task: VSBuild@1
   displayName: 'Build solution'
   inputs:
     solution: '$(solution)'
     msbuildArgs: ''
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
-
+    platform: '$(BuildPlatform)'
+    configuration: '$(BuildConfiguration)'
+    
 - task: DotNetCoreCLI@2
   displayName: 'Run UnitTests'
   continueOnError: false
   inputs:
     command: test
     projects: '**/*.Tests.csproj'
-    arguments: ''
-
+    arguments: '--no-restore --no-build --configuration $(buildConfiguration)'
+    
 - task: DotNetCoreCLI@2
-  displayName: 'Pack NuGet PreRelease'
+  displayName: 'Pack Tracing'
   inputs:
     command: pack
     packagesToPack: Tracing\*.csproj;Tracing.Extensions\**\*.csproj
     versioningScheme: byEnvVar
-    versionEnvVar: PackageVersionPre
-
-- task: DotNetCoreCLI@2
-  displayName: 'Pack NuGet Prod'
-  inputs:
-    command: pack
-    packagesToPack: Tracing\*.csproj;Tracing.Extensions\**\*.csproj
-    versioningScheme: byEnvVar
-    versionEnvVar: PackageVersion
+    versionEnvVar: semVersion
 
 - task: CopyFiles@2
   displayName: 'Copy Files to: $(Build.ArtifactStagingDirectory)'
@@ -127,12 +129,10 @@ steps:
     SourceFolder: '$(system.defaultworkingdirectory)'
 
     Contents: |
-     **\bin\$(buildConfiguration)\**
+     **\bin\$(BuildConfiguration)\**
      **\bin\*.nupkg
 
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
-
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
-
