--- a/Tracing.Extensions/Tracing.xunit/Tracing.xunit.csproj
+++ b/Tracing.Extensions/Tracing.xunit/Tracing.xunit.csproj
@@ -6,7 +6,7 @@
 		<VersionPrefix>1.0.0</VersionPrefix>
 		<Version>1.0.0</Version>
 		<Authors>Thomas Galliker</Authors>
-		<TargetFrameworks>net45;netstandard1.0;netstandard2.0</TargetFrameworks>
+		<TargetFrameworks>net45;netstandard1.0;netstandard2.0;netstandard2.1</TargetFrameworks>
 		<AssemblyName>Tracing.xunit</AssemblyName>
 		<PackageId>Tracing.xunit</PackageId>
 		<PackageTags>tracing tracer logging logger ITracer ILogger log trace abstraction xunit</PackageTags>
@@ -41,19 +41,22 @@
 	</PropertyGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
-		<PackageReference Include="xunit.abstractions" Version="2.0.0" />
+		<PackageReference Include="xunit.abstractions" Version="(2.0.0,]" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard1.0' ">
-		<PackageReference Include="xunit.abstractions" Version="2.0.3" />
+		<PackageReference Include="xunit.abstractions" Version="(2.0.0,]" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0' ">
-		<PackageReference Include="xunit.abstractions" Version="2.0.3" />
+		<PackageReference Include="xunit.abstractions" Version="(2.0.0,]" />
+	</ItemGroup>
+
+	<ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.1' ">
+		<PackageReference Include="xunit.abstractions" Version="(2.0.0,]" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-		<!--<PackageReference Include="Tracing" Version="2.0.18338.1-pre" />-->
 		<ProjectReference Include="..\..\Tracing\Tracing.csproj" />
 	</ItemGroup>
 
